# emu-ai-mem

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
claude-plugins/emu-ai-mem/: .mcp.json
claude-plugins/emu-ai-mem/.claude-plugin/: plugin.json
claude-plugins/emu-ai-mem/hooks/: hooks.json
claude-plugins/emu-ai-mem/skills/memory/: SKILL.md
claude-plugins/emu-ai-mem/skills/note/: SKILL.md
deploy/: .env.example  Caddyfile  Dockerfile  compose.yaml
docs/: gateway.md  offline.md  plugins.md  quickstart.md  surfaces.md  team-installation-guide.md
docs/install/: linux.md  macos.md  windows.md
plugins/emu-ai-mem/.codex-plugin/: plugin.json
plugins/emu-ai-mem/hooks/: hooks.json
plugins/emu-ai-mem/skills/memory/: SKILL.md
plugins/emu-ai-mem/skills/note/: SKILL.md
scripts/: verify_versions.py
src/emu_ai_mem/: __init__.py  cli.py  config.py  errors.py  gateway.py  gateway_auth.py  gateway_backend.py  gitops.py  hooks.py  index.py  installers.py  mcp_server.py  migration_v2.py  paths.py  records.py  semantic.py  services.py  setup_wizard.py  store.py  sync_v2.py  vaults.py
tests/: conftest.py  test_config_records.py  test_git_integration.py  test_index.py  test_migrate_and_install.py  test_note_and_mcp.py  test_plugin_metadata.py  test_v2_hooks_gateway.py  test_v2_performance.py  test_v2_store_sessions.py  test_v2_sync_migration.py
